--- a/src/components/analytics/FollowerGrowthChart.module.css
+++ b/src/components/analytics/FollowerGrowthChart.module.css
@@ -1,15 +1,15 @@
 .container {
-  padding: var(--spacing-6);
+  padding: 0;
 }
 
 .title {
   margin: 0 0 var(--spacing-6) 0;
-  font-size: 18px;
-  font-weight: var(--font-weight-semibold);
-  color: var(--color-text-primary);
+  font-size: 1rem;
+  font-weight: var(--font-weight-medium);
+  color: var(--color-text-secondary);
 }
 
 .chartWrapper {
-  height: 300px;
+  height: 400px;
   width: 100%;
 }
